Bugfix: text inside <xdialog> is blurry

--- a/stylesheets/x-dialog.css
+++ b/stylesheets/x-dialog.css
@@ -6,9 +6,7 @@
 
 :host {
   position: fixed;
-  left: 50%;
-  top: 0px;
-  width: 600px;
+  width: 70%;
   height: auto;
   min-height: 100px;
   padding: 0;
